Fix spacing between legends, fieldsets, form_groups and header tags. Add variables to variable sheet for this

--- a/assets/sass/common/_variables.scss
+++ b/assets/sass/common/_variables.scss
@@ -59,6 +59,10 @@ $padding-base-vertical: $padding-base-horizontal - 3 !default;
 $padding-large-horizontal: 20px !default;
 $padding-large-vertical: $padding-large-horizontal - 3 !default;
 
+// Form padding
+$form-group-spacing: 24px;
+$fieldset-spacing: 60px - $form-group-spacing - 4; // Account for the final form-group element, plus a few extra pixels since an h3 or h4 should lead a new fieldset
+
 $button-color: $white !default;
 $button-background: #5C5C5C !default;
 $button-hover-background: #424242 !default;
